force-app/main/default/objects/Trade__c/Trade__c.object-meta.xml
<CustomObject>
    <description>Tracks cryptocurrency trades executed by the Agent Swarm</description>
    <label>Trade</label>
    <nameField>
        <displayFormat>TRD-{000000}</displayFormat>
        <label>Trade Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>