force-app/main/default/objects/Trade__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Trade action type</description>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUY</fullName>
            </value>
            <value>
                <fullName>SELL</fullName>
            </value>
            <value>
                <fullName>HOLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>