force-app/main/default/objects/Trade__c/fields/Agent_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Execution_Id__c</fullName>
    <description>ID of the Agent Swarm execution that created this trade</description>
    <externalId>true</externalId>
    <label>Agent Execution ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>