force-app/main/default/objects/Trade__c/fields/Change_Percent__c.field-meta.xml
<CustomField>
    <fullName>Change_Percent__c</fullName>
    <description>Percent change that triggered the trade signal</description>
    <label>Change %</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>