force-app/main/default/objects/Trade__c/fields/Momentum__c.field-meta.xml
<CustomField>
    <fullName>Momentum__c</fullName>
    <description>Market momentum indicator</description>
    <label>Momentum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BULLISH</fullName>
            </value>
            <value>
                <fullName>BEARISH</fullName>
            </value>
            <value>
                <fullName>NEUTRAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>