force-app/main/default/objects/Trade__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity of cryptocurrency traded</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>