force-app/main/default/objects/Trade__c/fields/Signal_Strength__c.field-meta.xml
<CustomField>
    <fullName>Signal_Strength__c</fullName>
    <description>Strength of the trading signal</description>
    <label>Signal Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STRONG</fullName>
            </value>
            <value>
                <fullName>MODERATE</fullName>
            </value>
            <value>
                <fullName>WEAK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>