force-app/main/default/objects/Trade__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <description>Cryptocurrency symbol (e.g., BTC, ETH, SOL)</description>
    <label>Symbol</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>